[package]
name = "rouge-elements"
version = "0.1.0"
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite="0.30.4"
hlua="0.4.1"
raylib="3.7.0"
lazy_static = "1.4.0"
lazy-static-include = "3.1.4"
serde_json = "1.0.96"
flate2 = "1.0.25"
serde = { version = "1.0.160", features = ["derive"] }

[build-dependencies]
flate2 = "1.0.25"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
